# ToDo-Bot

./: .env  .gitignore  README.md  action_with_todo.py  bot_msg.py  build.bash  data.py  database.py  interface.py  main.py  main_b.py  requirements.txt  run.bash  sheduling.py  user_msg.py  utilits.py
database/: Cargo.toml  pyproject.toml
database/src/: bindings.rs  lib.rs
tg_bot/: .env  bot_main.py  bot_msg.py  main.py  token_reading.py  user_msg.py
