[package]
name = "database"
version = "0.1.0"
edition = "2021"


[lib]
name = "database"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.75"
pyo3 = { version = "0.20.0", features = ["anyhow","extension-module" ] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }
serde = { version = "1.0.193", features = ["derive"] }
surrealdb = "1.0.1"
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"] }
